# tiny_python_projects

./: .gitignore  pyproject.toml
01_hello/: hello.py  hello04_argparse_positional.py  hello04_docopt_positional.py  hello05_argparse_option.py  hello06_main_function.py  hello07_get_args.py  test.py
02_crowsnest/: Makefile  crowsnest.py  solution.py  solution_argparse.py
03_picnic/: picnic.py  solution.py
04_jump_the_five/: solution1.py  solution2.py  solution3.py  solution4.py  solution5.py
05_howler/: file_operations.doctest  solution_docopt1.py  solution_docopt2.py  test.py
06_wc/: solution.py  solution_ExitStack.py  solution_argparse.py  solution_fileinput.py  solution_generator.py  wc.py  wc_options.py
07_gashlycrumb/: _solution4_typer.py  solution1.py  solution2_dict_comp.py  solution3_dict_get.py
08_apples_and_bananas/: solution1_1_iterate_chars.py  solution1_iterate_chars.py  solution2_str_replace.py  solution3_str_translate.py  solution5_1_no_closure.py  solution5_list_comp_function.py  solution6_map_lambda.py  solution7_map_function.py  solution8_regex.py
09_abuse/: abuse.py  solution.py
10_telephone/: solution1.py  solution1_str_cat.py  solution2.py  solution2_list.py
11_bottles_of_beer/: bottles.py
12_ransom/: solution1_for_loop_append_list.py  solution2_for_loop_iadd_list.py  solution3_for_loop_iadd_string.py  solution4_list_comprehension.py  solution5_generator_expression.py  solution7_for_loop_generator.py
13_twelve_days/: twelve_days.py
appendix_argparse/: foo.py
appendix_docopt/: README.md  cat_n.py  cat_n_manual.py  choices.py  (+6 more)
(+22 files in other folders)
